# findary

./: .gitignore  .mailmap  CHANGELOG.md  Cargo.toml  Findary.sln  Findary.sln.DotSettings  README.md  deploy.sh
.github/workflows/: dotnet-desktop.yml
Findary/: GitUtil.cs  Options.cs  ThreadSafeBool.cs
Findary.Test/: ExtensionTest.cs  Extensions.cs  FileScanTest.cs  Findary.Test.csproj  GitUtilTest.cs  ScanServiceTest.cs
Findary/Abstraction/: ProcessWrapper.cs
Findary/FileScan/: IFileScan.cs
Findary/Service/: IService.cs  TrackService.cs
algorithm/src/: lib.rs
findary/: Bom.cs  Extensions.cs  Findary.cs  Findary.csproj  GitUtil.cs  Options.cs  StatisticsDao.cs  findary.sln
findary/Abstractions/: IOperatingSystem.cs
findary/FileScan/: FileScan.cs
findary/Properties/: launchSettings.json
findary/Service/: IService.cs  ScanService.cs  TrackService.cs
findary/findary/: Extensions.cs  Findary.cs  Options.cs  Program.cs  findary.csproj
src/: Findary.csproj  Findary.sln  StatisticsDao.cs  ThreadSafeUInt.cs  bom.rs  file.rs  filesystem.rs  filetype.rs  gitattributes.rs  gitignore.rs  main.rs  opt.rs  plugin.rs  stats.rs
src/Findary.Test/: ExtensionTest.cs  Findary.Test.csproj  GitUtilTest.cs
src/Properties/: launchSettings.json
src/findary/: Extensions.cs  Findary.cs  Findary.csproj  GitUtil.cs  Logger.cs  Options.cs  Program.cs  StatisticsDao.cs  ThreadSafeBool.cs
src/findary/Abstraction/: IOperatingSystem.cs  OperatingSystemWrapper.cs  ProcessWrapper.cs
src/plugins/: gitattributes.rs  gitignore.rs  plugin.rs
(+6 files in other folders)
