[package]
name = "findary"
version = "0.1.0"
#authors = "Daniel Hentzschel <delinsyl@gmx-topmail.de>"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
walkdir = "2"
glob = "0.3.0"
algorithm = { path = "./algorithm" }
